Fix overflow cta content

--- a/src/pages/HotelDetails/HotelDetails.module.scss
+++ b/src/pages/HotelDetails/HotelDetails.module.scss
@@ -96,6 +96,7 @@
     outline: none;
     cursor: pointer;
     position: relative;
+    overflow: hidden;
     &:hover {
       background-image: linear-gradient(
         to left,
